--- a/php-integration/index.html
+++ b/php-integration/index.html
@@ -6,6 +6,9 @@
     <title>Ollama with PHP Integration</title>
 </head>
 <body>
-    
+    <form action="api.php" method="post">
+        <input type="text" name="input" id="input">
+        <input type="submit" value="Generate output">
+    </form>
 </body>
 </html>
