--- a/php-integration/index.html
+++ b/php-integration/index.html
@@ -1,14 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ollama with PHP Integration</title>
-</head>
-<body>
-    <form action="api.php" method="post">
-        <input type="text" name="input" id="input">
-        <input type="submit" value="Generate output">
-    </form>
-</body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <h1>Ollama with PHP</h1>
+    </header>
+
+    <main>
+      <aside id="banner"></aside>
+      <form method="post" class="form-container">
+        <div class="form-filed">
+          <textarea
+            name="input"
+            id="input"
+            placeholder="Ask anything"
+          ></textarea>
+        </div>
+        <div class="form-field">
+          <input
+            type="button"
+            value="Generate output"
+            class="button"
+            onclick="callFunction()"
+          />
+        </div>
+      </form>
+      <div id="output"></div>
+    </main>
+
+    <script>
+        function displayResponse(data) {
+        document.getElementById("output").innerHTML = data.response || data.error || "No response";
+      }
+      function callFunction() {
+        var userInput = document.getElementById("input").value;
+
+        if (userInput && userInput.trim().length > 0) {
+          document.getElementById("submitBtn").disabled = true;
+          document.getElementById("submitBtn").value = "Processing...";
+
+          fetch("api.php", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ prompt: userInput }),
+          })
+          .then((response) => {
+            if (!response.ok) throw new Error('Network error');
+            return response.json();
+          })
+          .then((data) => {
+            displayResponse(data);
+            document.getElementById("submitBtn").disabled = false;
+            document.getElementById("submitBtn").value = "Generate output";
+          })
+          .catch((error) => {
+            document.getElementById("banner").textContent = "Error: " + error.message;
+            document.getElementById("submitBtn").disabled = false;
+            document.getElementById("submitBtn").value = "Generate output";
+          });
+        } else {
+          document.getElementById("banner").textContent = "Please enter Input";
+        }
+    </script>
+  </body>
 </html>
