--- a/ollama-php-chat/index.html
+++ b/ollama-php-chat/index.html
@@ -4,142 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ollama PHP Chat</title>
-    <style>
-      /* Basic styling for better appearance */
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-
-      body {
-        font-family: Arial, sans-serif;
-        background-color: #f5f5f5;
-        padding: 20px;
-      }
-
-      header {
-        text-align: center;
-        margin-bottom: 30px;
-      }
-
-      h1 {
-        color: #333;
-        font-size: 2rem;
-      }
-
-      .container {
-        max-width: 800px;
-        margin: 0 auto;
-        background: white;
-        border-radius: 10px;
-        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        padding: 30px;
-      }
-
-      .form-field {
-        margin-bottom: 20px;
-      }
-
-      #input {
-        width: 100%;
-        min-height: 120px;
-        padding: 15px;
-        border: 2px solid #ddd;
-        border-radius: 8px;
-        font-size: 16px;
-        resize: vertical;
-        font-family: inherit;
-      }
-
-      #input:focus {
-        outline: none;
-        border-color: #4caf50;
-      }
-
-      .button {
-        background-color: #4caf50;
-        color: white;
-        padding: 12px 24px;
-        border: none;
-        border-radius: 6px;
-        cursor: pointer;
-        font-size: 16px;
-        transition: background-color 0.3s;
-      }
-
-      .button:hover:not(:disabled) {
-        background-color: #45a049;
-      }
-
-      .button:disabled {
-        background-color: #ccc;
-        cursor: not-allowed;
-      }
-
-      #banner {
-        padding: 10px;
-        border-radius: 6px;
-        margin-bottom: 20px;
-        display: none;
-      }
-
-      #banner.error {
-        background-color: #ffe6e6;
-        color: #d00;
-        border: 1px solid #ffb3b3;
-        display: block;
-      }
-
-      #banner.success {
-        background-color: #e6ffe6;
-        color: #0a0;
-        border: 1px solid #b3ffb3;
-        display: block;
-      }
-
-      #output {
-        background-color: #f9f9f9;
-        border: 1px solid #ddd;
-        border-radius: 8px;
-        padding: 20px;
-        min-height: 100px;
-        white-space: pre-wrap;
-        font-family: "Courier New", monospace;
-        line-height: 1.5;
-        display: none;
-      }
-
-      #output.show {
-        display: block;
-      }
-
-      .loading {
-        display: none;
-        text-align: center;
-        padding: 20px;
-        color: #666;
-      }
-
-      .loading.show {
-        display: block;
-      }
-
-      /* Responsive design */
-      @media (max-width: 600px) {
-        body {
-          padding: 10px;
-        }
-
-        .container {
-          padding: 20px;
-        }
-
-        h1 {
-          font-size: 1.5rem;
-        }
-      }
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
